styles/globals.css
:root {
	--background-color: #eeeeee;
	--text-color: #000000;
	--spacing: 16px;
	--field-size: 80px;
	--transition-duration-base: 0.2s;
}

@media (prefers-reduced-motion: reduce) {
	:root {
		--transition-duration-base: 1ms;
	}
}

@media (min-width: 600px) {
	body {
		--spacing: 24px;
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		--background-color: #0e0e0e;
		--text-color: #ffffff;
	}
}

html,
body {
	padding: 0;
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

body {
	background-color: var(--background-color);
	color: var(--text-color);
	font-family: 'Roboto', sans-serif;
}

html {
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

a {
	color: inherit;
	text-decoration: none;
}

* {
	box-sizing: border-box;
}

a:focus:not(:focus-visible),
button:focus:not(:focus-visible) {
	outline: none;
}

